# brave-core

./: DEPS  brave_paks.gni  package-lock.json  package.json
.storybook/: BUILD.gn
android/: brave_java_resources.gni  brave_java_sources.gni
android/java/: AndroidManifest.xml  apk_for_test.flags
app/: brave_generated_resources.grd  brave_main_delegate_browsertest.cc
browser/: brave_content_browser_client.cc  brave_profile_prefs.cc  sources.gni
browser/brave_ads/: ads_service_impl.cc  ads_service_impl.h  ads_tab_helper.cc  ads_tab_helper.h  search_ad_link_data_browsertest.cc
browser/brave_wallet/: BUILD.gn  brave_wallet_provider_delegate_impl.cc  brave_wallet_provider_impl_unittest.cc  brave_wallet_service_delegate_impl.cc  brave_wallet_tab_helper.cc  send_transaction_browsertest.cc
browser/permissions/: brave_wallet_permission_context_browsertest.cc  brave_wallet_permission_context_unittest.cc  permission_manager_browsertest.cc
browser/resources/: resource_ids
browser/ui/: BUILD.gn
components/bls/rs/: Cargo.toml
components/brave_adaptive_captcha/: BUILD.gn  brave_adaptive_captcha_service.cc
components/brave_federated/: BUILD.gn
components/brave_private_cdn/: private_cdn_request_helper.cc
components/brave_vpn/: BUILD.gn  brave_vpn.mojom  brave_vpn_constants.h  brave_vpn_service.cc  brave_vpn_service.h  (+2 more)
patches/: build-android-gyp-proguard.py.patch  build-config-android-config.gni.patch  chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-browser-BUILD.gn.patch
test/: BUILD.gn
(+133 files in other folders)
